crates/locus-core/tests/snapshots/regression_icra2020__fixtures_edlines_moments.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 1
  mean_recall: 1
  mean_rmse: 0.0714
  mean_total_ms: "[DURATION]"
  worst_offenders: []
