crates/locus-core/tests/snapshots/regression_icra2020__fixtures_moments_culling.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
assertion_line: 380
expression: report
---
summary:
  dataset_size: 1
  mean_recall: 1
  mean_rmse: 0.1315
  mean_total_ms: "[DURATION]"
  worst_offenders: []
