crates/locus-core/tests/snapshots/regression_icra2020__fixtures_sota.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
assertion_line: 383
expression: report
---
summary:
  dataset_size: 1
  mean_recall: 0.7402597402597403
  mean_rmse: 0.7134
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0037.png
      missed: 40
      extra: 0
      rmse: 0.7134
