crates/locus-core/tests/snapshots/regression_icra2020__fixtures_sota_checkerboard.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
assertion_line: 389
expression: report
---
summary:
  dataset_size: 1
  mean_recall: 1
  mean_rmse: 0.144
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0037.png
      missed: 0
      extra: 53
      rmse: 0.144
