crates/locus-core/tests/snapshots/regression_icra2020__hub_single_tag_locus_v1_std41h12.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 95
  mean_recall: 1
  mean_rmse: 113.8674
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0080_cam_0000.png
      missed: 0
      extra: 6
      rmse: 142.7292
    - filename: scene_0028_cam_0000.png
      missed: 0
      extra: 4
      rmse: 150.7322
    - filename: scene_0092_cam_0000.png
      missed: 0
      extra: 4
      rmse: 141.162
    - filename: scene_0089_cam_0000.png
      missed: 0
      extra: 4
      rmse: 129.7034
    - filename: scene_0048_cam_0000.png
      missed: 0
      extra: 4
      rmse: 122.64
