crates/locus-core/tests/snapshots/regression_icra2020__hub_single_tag_locus_v1_tag16h5.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 100
  mean_recall: 0
  mean_rmse: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0028_cam_0000.png
      missed: 1
      extra: 5
      rmse: 0
    - filename: scene_0057_cam_0000.png
      missed: 1
      extra: 5
      rmse: 0
    - filename: scene_0092_cam_0000.png
      missed: 1
      extra: 5
      rmse: 0
    - filename: scene_0051_cam_0000.png
      missed: 1
      extra: 4
      rmse: 0
    - filename: scene_0080_cam_0000.png
      missed: 1
      extra: 4
      rmse: 0
