crates/locus-core/tests/snapshots/regression_icra2020__hub_single_tag_locus_v1_tag36h11.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 95
  mean_recall: 1
  mean_rmse: 119.1324
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0080_cam_0000.png
      missed: 0
      extra: 6
      rmse: 164.1872
    - filename: scene_0057_cam_0000.png
      missed: 0
      extra: 5
      rmse: 77.4864
    - filename: scene_0092_cam_0000.png
      missed: 0
      extra: 4
      rmse: 140.5582
    - filename: scene_0004_cam_0000.png
      missed: 0
      extra: 4
      rmse: 96.3912
    - filename: scene_0029_cam_0000.png
      missed: 0
      extra: 4
      rmse: 29.3449
