crates/locus-core/tests/snapshots/regression_icra2020__icra_circle_checkerboard_corners_images.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 180
  mean_recall: 0.7696248196248194
  mean_rmse: 0.6855
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0002.png
      missed: 154
      extra: 164
      rmse: 0
    - filename: 0004.png
      missed: 154
      extra: 164
      rmse: 0
    - filename: 0000.png
      missed: 154
      extra: 155
      rmse: 0
    - filename: 0176.png
      missed: 154
      extra: 154
      rmse: 0
    - filename: 0180.png
      missed: 154
      extra: 150
      rmse: 0
