crates/locus-core/tests/snapshots/regression_icra2020__icra_circle_pure_tags_images.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 181
  mean_recall: 0.8442993470617772
  mean_rmse: 0.425
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0000.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0001.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0002.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0178.png
      missed: 154
      extra: 0
      rmse: 0
    - filename: 0179.png
      missed: 154
      extra: 0
      rmse: 0
