crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_checkerboard_corners_images.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.9142857142857143
  mean_rmse: 0.4577
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0001.png
      missed: 80
      extra: 112
      rmse: 0.837
    - filename: 0000.png
      missed: 79
      extra: 124
      rmse: 0.475
    - filename: 0002.png
      missed: 54
      extra: 112
      rmse: 0.758
    - filename: 0003.png
      missed: 51
      extra: 104
      rmse: 0.493
    - filename: 0004.png
      missed: 49
      extra: 105
      rmse: 0.4897
